app/src/main/java/com/example/truckercore/model/errors/exceptions/AppException.kt
package com.example.truckercore.model.errors.exceptions

abstract class AppException(message: String? = null, cause: Throwable? = null)
    : Exception(message, cause)
